компилируется после миграции на Spring